Add manual trigger for updating the latest tag
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: ae5268a80deb44e6434a13b6c0273c1d291b23ee

--- a/hegel/.github/workflows/latest.yaml
+++ b/hegel/.github/workflows/latest.yaml
@@ -7,6 +7,7 @@
 # an associated docker image.
 name: Latest
 on:
+  workflow_dispatch: {}
   release:
     types: [published, edited]
 
@@ -20,6 +21,6 @@ jobs:
     steps:
       - run: |
           LATEST=$(curl -H "Accept: application/json" https://api.github.com/repos/tinkerbell/hegel/releases/latest | jq .name -r)
-          docker pull {{ env.IMAGE }}:$LATEST
-          docker tag {{ env.IMAGE }}:$LATEST {{ env.IMAGE }}:latest
-          docker push {{ env.IMAGE }}:latest
+          docker pull ${{ env.IMAGE }}:$LATEST
+          docker tag ${{ env.IMAGE }}:$LATEST ${{ env.IMAGE }}:latest
+          docker push ${{ env.IMAGE }}:latest
