--- a/hegel/.github/workflows/latest.yaml
+++ b/hegel/.github/workflows/latest.yaml
@@ -19,7 +19,15 @@ jobs:
     name: Update latest image tag
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - name: Login to quay.io
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+
+      - name: Tag and push
+        run: |
           LATEST=$(curl -H "Accept: application/json" https://api.github.com/repos/tinkerbell/hegel/releases/latest | jq .name -r)
           docker pull ${{ env.IMAGE }}:$LATEST
           docker tag ${{ env.IMAGE }}:$LATEST ${{ env.IMAGE }}:latest
