Move to alpine image for downloading Hook:
Moving to alpine means we don't have to do
any apt updates or package installs. These apt
commands can cause issues and are unnecceary.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: bbcbb19152c830331c5e696de7f4fafe54a066e3

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -64,17 +64,15 @@ spec:
       initContainers:
       - name: init-hook-download
         image: {{ .Values.stack.hook.image }}
-        command: ["/bin/bash", "-xeuc"]
+        command: ["/bin/sh", "-xeuc"]
         args:
         - |
-          apt-get update
-          apt-get install -y wget
           cd /usr/share/nginx/html
           {{- range $index, $keys := .Values.stack.hook.downloads }}
           p=/tmp/hook{{ $index }}.tar.gz
           rm -f $p
           wget -O $p {{ $keys.url }}
-          sha512sum --check <<EOF
+          sha512sum -c <<EOF
           {{ $keys.sha512sum }} $p
           EOF
           tar -zxvf $p
