Make the download location for Hook files configurable:
Adds some flexibility.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 3c0479916fff6d91b4cece42d4c061533842d2fb

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -86,7 +86,7 @@ spec:
       {{- if .Values.stack.hook.enabled }}
       - name: hook-artifacts
         hostPath:
-          path: /opt/hook
+          path: {{ .Values.stack.hook.downloadsDest }}
           type: DirectoryOrCreate
       {{- end }}
       - name: nginx-conf
