--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -30,7 +30,7 @@ spec:
         command: ["/bin/bash", "-xeuc"]
         args:
         - |
-          POD_NAMESERVER=$(awk 'NR==2 {print $2}' /etc/resolv.conf) \
+          POD_NAMESERVER=$(awk '/nameserver/ {print $2}' /etc/resolv.conf) \
             envsubst '$POD_NAMESERVER' \
             </tmp/nginx.conf.template \
             >/etc/nginx/nginx.conf
