--- a/charts/tinkerbell/stack/templates/nginx-configmap.yaml
+++ b/charts/tinkerbell/stack/templates/nginx-configmap.yaml
@@ -16,26 +16,27 @@ data:
 
     http {
       server {
-        listen {{ .Values.hegel.deployment.port }};
+        listen {{ .Values.hegel.service.port }};
         location / {
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
           set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
 
-          proxy_pass http://$hegel_dns:{{ .Values.hegel.deployment.port }};
+          proxy_pass http://$hegel_dns:{{ .Values.hegel.service.port }};
         }
       }
 
       server {
-        listen {{ .Values.tink.server.deployment.port }} http2;
+        listen {{ .Values.tink.server.service.port }};
+        http2 on;
         location / {
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
           set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
 
-          grpc_pass grpc://$tink_dns:{{ .Values.tink.server.deployment.port }};
+          grpc_pass grpc://$tink_dns:{{ .Values.tink.server.service.port }};
         }
       }
 
@@ -44,6 +45,49 @@ data:
         location / {
           root /usr/share/nginx/html;
         }
+      }
+
+      server {
+        listen {{ .Values.boots.http.port }};
+        location / {
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          resolver $POD_NAMESERVER;
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+
+          proxy_pass http://$boots_dns:{{ .Values.boots.http.port }};
+        }
+      }
+    }
+
+    stream {
+      log_format logger-json escape=json '{"source": "nginx", "time": $msec, "address": "$remote_addr", "status": $status, "upstream_addr": "$upstream_addr"}';
+
+      server {
+          listen {{ .Values.boots.dhcp.port }} udp;
+          resolver $POD_NAMESERVER; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          proxy_pass $boots_dns:{{ .Values.boots.dhcp.port }};
+          proxy_bind $remote_addr:$remote_port transparent;
+          proxy_responses 0;
+          access_log /dev/stdout logger-json;
+      }
+      server {
+          listen {{ .Values.boots.tftp.port }} udp;
+          resolver $POD_NAMESERVER;
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          proxy_pass $boots_dns:{{ .Values.boots.tftp.port }};
+          proxy_timeout 1s;
+          access_log /dev/stdout logger-json;
+      }
+      server {
+          listen {{ .Values.boots.syslog.port }} udp;
+          resolver $POD_NAMESERVER;
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          proxy_pass $boots_dns:{{ .Values.boots.syslog.port }};
+          proxy_bind $remote_addr:$remote_port transparent;
+          proxy_responses 0;
+          access_log /dev/stdout logger-json;
       }
     }
 {{- end }}
