--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -8,7 +8,8 @@ stack:
     app: tink-stack
   loadBalancerIP: 192.168.2.112
   lbClass: kube-vip.io/kube-vip-class
-  image: nginx:1.23.1
+  # Once the Kubernetes Gateway API is more stable, we will use that for all services instead of nginx.
+  image: nginx:1.25.1
   hook:
     enabled: true
     name: hook-files
@@ -23,7 +24,7 @@ stack:
   kubevip:
     enabled: true
     name: kube-vip
-    image: ghcr.io/kube-vip/kube-vip:v0.5.7
+    image: ghcr.io/kube-vip/kube-vip:v0.5.12
     imagePullPolicy: IfNotPresent
     roleName: kube-vip-role
     roleBindingName: kube-vip-rolebinding
@@ -46,12 +47,12 @@ stack:
 # See individual chart documentation for additional detail.
 
 boots:
-  image: quay.io/tinkerbell/boots:v0.8.0
-  tinkWorkerImage: quay.io/tinkerbell/tink-worker:v0.8.0
+  image: quay.io/tinkerbell/boots:v0.9.0
+  tinkWorkerImage: quay.io/tinkerbell/tink-worker:v0.9.0
   trustedProxies: []
-  # This will be the IP address that machines use to reach Boots (via unicast for DHCP) for netbooting. It should be a unused IP address in your network.
-  remoteIp: 192.168.2.113
-  # Once the Kubernetes Gateway API is more stable, we will use that and be able to require only a single IP for all Tinkerbell services.
+  # This will be the IP address that machines use to reach Boots (via unicast for DHCP) for netbooting.
+  # This should be the same as `stack.loadBalancerIP`.
+  remoteIp: 192.168.2.112
   tinkServer:
     # This should be the same as `stack.loadBalancerIP`.
     ip: 192.168.2.112
@@ -60,14 +61,14 @@ boots:
     ip: 192.168.2.112
 
 hegel:
-  image: quay.io/tinkerbell/hegel:v0.10.1
+  image: quay.io/tinkerbell/hegel:v0.11.0
   trustedProxies: []
 
 rufio:
-  image: quay.io/tinkerbell/rufio:v0.1.0
+  image: quay.io/tinkerbell/rufio:v0.3.0
 
 tink:
   controller:
-    image: quay.io/tinkerbell/tink-controller:v0.8.0
+    image: quay.io/tinkerbell/tink-controller:v0.9.0
   server:
-    image: quay.io/tinkerbell/tink:v0.8.0
+    image: quay.io/tinkerbell/tink:v0.9.0
