Revert more code from when we were using nginx for all services:
Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: d59f36d7b6bff74146c66c431faef008c19cb7b7

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -52,9 +52,11 @@ boots:
   image: quay.io/tinkerbell/boots:v0.9.0
   tinkWorkerImage: quay.io/tinkerbell/tink-worker:v0.9.0
   trustedProxies: []
-  # This will be the IP address that machines use to reach Boots (via unicast for DHCP) for netbooting.
-  # This should be the same as `stack.loadBalancerIP`.
-  remoteIp: *publicIP
+  # This will be the IP address that machines use to reach Boots (via unicast for DHCP and for tftp/http of ipxe binaries/scripts) for netbooting.
+  # It should be a unused IP address in your network.
+  # Once the Kubernetes Gateway API and an implementation is available that can implements HTTP(S), UDP, GRPC, and transparent proxying, we will use that
+  # and be able to require only a single IP for all Tinkerbell services.
+  remoteIp: 192.168.2.113
   tinkServer:
     # This should be the same as `stack.loadBalancerIP`.
     ip: *publicIP
