--- a/charts/tinkerbell/boots/values.yaml
+++ b/charts/tinkerbell/boots/values.yaml
@@ -29,7 +29,7 @@ deployment:
 
 service:
   enabled: true
-  type: ClusterIP
+  type: LoadBalancer
   class: kube-vip.io/kube-vip-class
   loadBalancerIP: ""
 
