Add comment about yaml anchor
Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: cd3d466c3e5857850f27f2247546817b2e5002fc

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -6,6 +6,8 @@ stack:
     type: LoadBalancer
   selector:
     app: tink-stack
+  # &publicIP is a YAML anchor. It allows us to define a value once and reference it multiple times.
+  # https://helm.sh/docs/chart_template_guide/yaml_techniques/#yaml-anchors
   loadBalancerIP: &publicIP 192.168.2.112
   lbClass: kube-vip.io/kube-vip-class
   # Once the Kubernetes Gateway API is more stable, we will use that for all services instead of nginx.
