--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -64,20 +64,19 @@ spec:
       initContainers:
       - name: init-hook-download
         image: {{ .Values.stack.hook.image }}
-        command: ["/bin/sh", "-xeuc"]
+        command: ["bash", "-xeuc"]
         args:
         - |
           cd /usr/share/nginx/html
-          {{- range $index, $keys := .Values.stack.hook.downloads }}
-          p=/tmp/hook{{ $index }}.tar.gz
-          rm -f $p
-          wget -O $p {{ $keys.url }}
-          sha512sum -c <<EOF
-          {{ $keys.sha512sum }} $p
-          EOF
-          tar -zxvf $p
-          rm -f $p
-          {{- end }}
+          rm -f *.tar.gz checksum.txt vmlinuz* initramfs*
+          base_loc="{{ .Values.stack.hook.downloadURL}}"
+          files="$base_loc/hook_aarch64.tar.gz $base_loc/hook_x86_64.tar.gz $base_loc/checksum.txt"
+          for f in $files; do
+            echo "$f"
+            wget "$f"
+          done
+          sha512sum -c checksum.txt
+          for f in *.tar.gz; do tar --no-same-permissions --overwrite -ozxvf "$f" && rm -f "$f"; done
         volumeMounts:
         - mountPath: /usr/share/nginx/html
           name: hook-artifacts
