Update Boots to Smee, put all services behind a single IP:
Update to use Smee. The CLI flags changed so the bulk
of the work was to rework the values.yaml for Smee
to accommodate.

Second change was to get all service behind a single
load balancer IP. All stack services except DHCP run
through nginx. A DHCP relay side car is run in the pod
with nginx to handle broadcast and unicast DHCP.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 01241a9cdc45448061274c54a2a828f7419743f0

--- a/charts/.github/workflows/ci.yaml
+++ b/charts/.github/workflows/ci.yaml
@@ -17,4 +17,4 @@ jobs:
 
       - name: Helm lint
         # run `helm dependency update tinkerbell/stack`` if this fails
-        run: helm dependency build tinkerbell/stack/ && helm lint tinkerbell/{boots,hegel,stack,tink}
+        run: helm dependency build tinkerbell/stack/ && helm lint tinkerbell/{smee,hegel,stack,tink}
