--- a/charts/tinkerbell/stack/templates/nginx-configmap.yaml
+++ b/charts/tinkerbell/stack/templates/nginx-configmap.yaml
@@ -16,6 +16,18 @@ data:
 
     http {
       server {
+        listen {{ .Values.smee.http.port }};
+        location / {
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          resolver $POD_NAMESERVER;
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+
+          proxy_pass http://$smee_dns:{{ .Values.smee.http.port }};
+        }
+      }
+
+      server {
         listen {{ .Values.hegel.service.port }};
         location / {
           proxy_set_header X-Real-IP $remote_addr;
@@ -45,6 +57,26 @@ data:
         location / {
           root /usr/share/nginx/html;
         }
+      }
+    }
+
+    stream {
+      log_format logger-json escape=json '{"source": "nginx", "time": $msec, "address": "$remote_addr", "status": $status, "upstream_addr": "$upstream_addr"}';
+
+      server {
+          listen {{ .Values.smee.tftp.port }} udp;
+          resolver $POD_NAMESERVER;
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          proxy_pass $smee_dns:{{ .Values.smee.tftp.port }};
+          proxy_timeout 1s;
+          access_log /dev/stdout logger-json;
+      }
+      server {
+          listen {{ .Values.smee.syslog.port }} udp;
+          resolver $POD_NAMESERVER;
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          proxy_pass $smee_dns:{{ .Values.smee.syslog.port }};
+          access_log /dev/stdout logger-json;
       }
     }
 {{- end }}
