Move the Hook download to a Job:
This allows the stack to deploy even when
there are issues downloading Hook.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: fb2e89edcb0ac568dce996d7f992b820351ea8bf

--- a/charts/tinkerbell/smee/values.yaml
+++ b/charts/tinkerbell/smee/values.yaml
@@ -34,9 +34,10 @@ logLevel: "info"
 # host network.
 hostNetwork: false
 
-# oneIP when defined will be used in place of the IP in the following, if they are not defined:
+# publicIP when defined will be used as the IP in the following locations if they are not defined:
 # dhcp.httpIPXE.binaryUrl.host, dhcp.httpIPXE.scriptUrl.host, tinkServer.ip, http.osieUrl.host, dhcp.ipForPacket, dhcp.tftpIp
-oneIP: "127.0.0.1"
+# This is useful when all Tinkerbell services are running behind the same IP.
+publicIP: "127.0.0.1"
 
 # DHCP server configuration. Name is an identifier used across Kubernetes manifests for port
 # identification, ip is the IP address to bind to, and port is the port to bind to.
