--- a/charts/tinkerbell/smee/templates/deployment.yaml
+++ b/charts/tinkerbell/smee/templates/deployment.yaml
@@ -1,11 +1,11 @@
 {{- if .Values.deploy }}
-{{- $_ := set .Values.dhcp "syslogIp" (default .Values.oneIP .Values.dhcp.syslogIp) }}
-{{- $_ := set .Values.dhcp "ipForPacket" (default .Values.oneIP .Values.dhcp.ipForPacket) }}
-{{- $_ := set .Values.dhcp "tftpIp" (default .Values.oneIP .Values.dhcp.tftpIp) }}
-{{- $_ := set .Values.dhcp.httpIPXE.binaryUrl "host" (default .Values.oneIP .Values.dhcp.httpIPXE.binaryUrl.host) }}
-{{- $_ := set .Values.dhcp.httpIPXE.scriptUrl "host" (default .Values.oneIP .Values.dhcp.httpIPXE.scriptUrl.host) }}
-{{- $_ := set .Values.http.tinkServer "ip" (default .Values.oneIP .Values.http.tinkServer.ip) }}
-{{- $_ := set .Values.http.osieUrl "host" (default .Values.oneIP .Values.http.osieUrl.host) }}
+{{- $_ := set .Values.dhcp "syslogIp" (default .Values.publicIP .Values.dhcp.syslogIp) }}
+{{- $_ := set .Values.dhcp "ipForPacket" (default .Values.publicIP .Values.dhcp.ipForPacket) }}
+{{- $_ := set .Values.dhcp "tftpIp" (default .Values.publicIP .Values.dhcp.tftpIp) }}
+{{- $_ := set .Values.dhcp.httpIPXE.binaryUrl "host" (default .Values.publicIP .Values.dhcp.httpIPXE.binaryUrl.host) }}
+{{- $_ := set .Values.dhcp.httpIPXE.scriptUrl "host" (default .Values.publicIP .Values.dhcp.httpIPXE.scriptUrl.host) }}
+{{- $_ := set .Values.http.tinkServer "ip" (default .Values.publicIP .Values.http.tinkServer.ip) }}
+{{- $_ := set .Values.http.osieUrl "host" (default .Values.publicIP .Values.http.osieUrl.host) }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
