Update default route interface lookup:
If multiple default routes exists,
we should only use the first one.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 6e104bcb02e625f0273f4041da4d4b04436b2e4c

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -116,7 +116,7 @@ spec:
             # if sourceInterface is not set use the interface from the default route
             srcInterface="{{ $sourceInterface }}"
             if [ -z "$srcInterface" ]; then
-              srcInterface=$(nsenter -t1 -n ip route | awk '/default/ {print $5}')
+              srcInterface=$(nsenter -t1 -n ip route | awk '/default/ {print $5}' | head -n1)
             fi
             # Create a macvlan interface. TODO: If this fails, try again with a different name?
             nsenter -t1 -n ip link add {{ $macvlanInterfaceName }} link ${srcInterface} type macvlan mode bridge
