Remove references to Boots:
Replaced with Smee.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 3eae6f6b7cfc12f6b5fded072ca8b744d6c5a08b

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -109,9 +109,9 @@ spec:
           - /bin/sh
           - -c
           - |
-            # This script allows us to listen and respond to DHCP requests on a host network interface and interact with Boots properly.
+            # This script allows us to listen and respond to DHCP requests on a host network interface and interact with Smee properly.
             # This is used instead of `hostNetwork: true` because the dhcp relay requires clear paths for listening for broadcast traffic
-            # and sending/receiving unicast traffic to/from Boots.
+            # and sending/receiving unicast traffic to/from Smee.
             set -xe
             # if sourceInterface is not set use the interface from the default route
             srcInterface="{{ $sourceInterface }}"
