Make nginx the default for retrieving logs
When retrieving logs with kubectl without specifying the -c (container)
option, Kubernetes retrieves logs from the first container. More often
than not, we want the nginx logs as opposed to the DHCP relay logs,
hence this change specifies nginx as the first container.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: c30af3ac059d7800c7345785c22e63744d47a3cd

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -30,11 +30,12 @@ stack:
     roleBindingName: kube-vip-rolebinding
     # Customize the interface KubeVIP advertises on. When unset, KubeVIP will autodetect the interface.
     # interface: enp0s8
-  relay: # relay allows us to listen and respond to layer broadcast DHCP requests
+  # Relay allows us to listen and respond to layer broadcast DHCP requests
+  relay:
     name: dhcp-relay
     enabled: true
     # This image (ghcr.io/jacobweinstock/dhcrelay) is used because the other public dhcprelay images out there (`modem7/dhcprelay`)
-    # doesn't respect signals properly when run as PID 1.
+    # don't respect signals properly when run as PID 1.
     image: ghcr.io/jacobweinstock/dhcrelay
     maxHopCount: 10
     # sourceInterface is the Host/Node interface to use for listening for DHCP broadcast packets.
