Disable dot-imports in revive golang ci lint linter
The linter is picking up dot imports in test files which are a valid
use-case. Until it is corrected, the dot-import rule has been disabled.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 0c9b5c595783d56a5753fba80e911fd531d8754c

--- a/hegel/.golangci.yml
+++ b/hegel/.golangci.yml
@@ -83,6 +83,7 @@ linters-settings:
       - name: range-val-in-closure
       - name: range-val-address
       - name: dot-imports
+        disabled: true # Disable until dot-import is allowed in test files.
       - name: error-naming
       - name: error-return
       - name: error-strings
