Update Hegel to v0.12.0
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 119f8fff4b7f0731b5687d0ce83eb928655c1ffd

--- a/charts/tinkerbell/hegel/templates/deployment.yaml
+++ b/charts/tinkerbell/hegel/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       containers:
         - args:
           - --backend=kubernetes
-          - --http-port={{ .Values.deployment.port }}
+          - --http-addr=:{{ .Values.deployment.port }}
           {{- range .Values.args }}
           - {{ . }}
           {{- end }}
