stack: relay: use multiarch dhcp-relay image ghcr.io/jacobweinstock/dhcprelay
Signed-off-by: Ricardo Pardini <ricardo@pardini.net>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 951d279acbb1e18b53f7361720de57648ac6a580

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -36,7 +36,7 @@ stack:
     enabled: true
     # This image (ghcr.io/jacobweinstock/dhcrelay) is used because the other public dhcprelay images out there (`modem7/dhcprelay`)
     # don't respect signals properly when run as PID 1.
-    image: ghcr.io/jacobweinstock/dhcrelay
+    image: ghcr.io/jacobweinstock/dhcprelay # dhcprelay is a multiarch-enabled version of dhcrelay
     maxHopCount: 10
     # sourceInterface is the Host/Node interface to use for listening for DHCP broadcast packets.
     # When unset, the interface from the default route will be used.
