--- a/charts/tinkerbell/stack/templates/nginx-configmap.yaml
+++ b/charts/tinkerbell/stack/templates/nginx-configmap.yaml
@@ -21,7 +21,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.{{ .Values.stack.clusterDomain }}.; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$smee_dns:{{ .Values.smee.http.port }};
         }
@@ -33,7 +33,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
+          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.{{ .Values.stack.clusterDomain }}.; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$hegel_dns:{{ .Values.hegel.service.port }};
         }
@@ -46,7 +46,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
+          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.{{ .Values.stack.clusterDomain }}.; # needed in Kubernetes for dynamic DNS resolution
 
           grpc_pass grpc://$tink_dns:{{ .Values.tink.server.service.port }};
         }
@@ -68,14 +68,14 @@ data:
       server {
           listen {{ .Values.smee.tftp.port }} udp;
           resolver $POD_NAMESERVER;
-          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.{{ .Values.stack.clusterDomain }}.; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $smee_dns:{{ .Values.smee.tftp.port }};
           access_log /dev/stdout logger-json;
       }
       server {
           listen {{ .Values.smee.syslog.port }} udp;
           resolver $POD_NAMESERVER;
-          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
+          set $smee_dns {{ .Values.smee.name }}.{{ .Release.Namespace }}.svc.{{ .Values.stack.clusterDomain }}.; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $smee_dns:{{ .Values.smee.syslog.port }};
           access_log /dev/stdout logger-json;
       }
