Fix spelling issue in Smee chart
Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: d42f8f6a8e6361a972228c1bb9e1e06d9718231d

--- a/charts/tinkerbell/smee/values.yaml
+++ b/charts/tinkerbell/smee/values.yaml
@@ -91,7 +91,7 @@ http:
     port: 8080
     path: ""
   # Additional kernel arguments to pass to the OSIE. (k=v k=v) that are appended to the kernel cmdline in the iPXE script
-  additionlKernelArgs: []
+  additionalKernelArgs: []
   # enable iPXE HTTP binary server
   ipxeBinaryEnabled: true
   # enable iPXE HTTP script server
