--- a/charts/tinkerbell/smee/templates/deployment.yaml
+++ b/charts/tinkerbell/smee/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
             - -dhcp-ip-for-packet={{ .Values.dhcp.ipForPacket }}
             - -dhcp-syslog-ip={{ .Values.dhcp.syslogIp }}
             - -dhcp-tftp-ip={{ .Values.dhcp.tftpIp }}:69
-            - -extra-kernel-args={{ join " " ( append .Values.http.additionlKernelArgs ( printf "tink_worker_image=%s" ( required "missing tinkWorkerImage" .Values.tinkWorkerImage ) ) ) }}
+            - -extra-kernel-args={{ join " " ( append .Values.http.additionalKernelArgs ( printf "tink_worker_image=%s" ( required "missing tinkWorkerImage" .Values.tinkWorkerImage ) ) ) }}
             - -http-addr={{ printf "%v:%v" .Values.http.ip .Values.http.port }}
             - -http-ipxe-binary-enabled={{ .Values.http.ipxeBinaryEnabled }}
             - -http-ipxe-script-enabled={{ .Values.http.ipxeScriptEnabled }}
